replace lombok with java 25 features