@@ -1,13 +1,10 @@
 package de.gematik.test.fhir;
 
-import lombok.val;
-import java.util.Collections;
 import java.util.EnumMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 
-public final class ComparisonDiff {
+public record ComparisonDiff(List<DiffEntry> entries) {
 
   public enum Category {
     TYPE_MISMATCH,
@@ -30,14 +27,8 @@ public final class ComparisonDiff {
     }
   }
 
-  private final List<DiffEntry> entries;
-
-  public ComparisonDiff(List<DiffEntry> entries) {
-    this.entries = List.copyOf(entries);
-  }
-
-  public List<DiffEntry> entries() {
-    return Collections.unmodifiableList(entries);
+  public ComparisonDiff {
+    entries = List.copyOf(Objects.requireNonNull(entries, "entries must not be null"));
   }
 
   public boolean isEqual() {
@@ -49,15 +40,15 @@ public final class ComparisonDiff {
       return "No differences found.";
     }
 
-    val counts = new EnumMap<Category, Integer>(Category.class);
-    for (val entry : entries) {
+    var counts = new EnumMap<Category, Integer>(Category.class);
+    for (var entry : entries) {
       counts.merge(entry.category(), 1, Integer::sum);
     }
 
-    val builder = new StringBuilder();
+    var builder = new StringBuilder();
     builder.append("Differences found: ").append(entries.size());
-    for (val category : Category.values()) {
-      val value = counts.get(category);
+    for (var category : Category.values()) {
+      var value = counts.get(category);
       if (value != null && value > 0) {
         builder.append(" | ").append(category.name()).append('=').append(value);
       }
